syntax = "proto3";
package vpnaas;

service Keys {
    // For wg_server
    rpc get_all_peers(Empty) returns (Peers);

    // For configgen
    rpc get_allowed_ip(User) returns (AllowedIp);

    // For frontend
    rpc set_pubkey(UserPubkey) returns (Success);
}

service Wg {
    rpc push_new_peer(Peer) returns (Success);
}

service ConfigGen {
    rpc get_config(User) returns (UserConfig);
}

//
// Messages
//

message Success {}
message Empty {}

// Pubkey is a separate struct to idiomatically implement From<Pubkey> for [u8; 32]
message Pubkey {
    bytes bytes = 1;
}

message User {
    string username = 1;
}

message Peer {
    bytes pubkey = 1;
    uint32 allowed_ip = 2;
}

message AllowedIp {
    uint32 allowed_ip = 1;
}

message UserPubkey {
    User user = 1;
    Pubkey pubkey = 2;
}

message Peers {
    repeated Peer peers = 1;
}

message UserConfig {
    message ServerPeer {
        Pubkey pubkey = 1;
        string endpoint = 2;
        repeated string allowed_ips = 3;
    }

    uint32 user_address = 1; // get_user_address
    ServerPeer server_peer = 2; // hardcoded
    string dns = 3; // hardcoded
}

message UserPubkeyStatus { bool added = 1; }
message PeerPushStatus   { bool added = 1; }
